--- a/mileston_03/index.html
+++ b/mileston_03/index.html
@@ -24,28 +24,28 @@
             <br>
            
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br>
+            <input type="email" id="email" name="email" required placeholder="Enter your email."><br>
 
             <label for="phone">Phone:</label>
-            <input type="tel" id="phone" name="phone" required>
+            <input type="tel" id="phone" name="phone" placeholder="Enter your Phone No#." required><br> 
         </fieldset>
 
         <fieldset>
             <legend>Education</legend>
             <label for="education">Education:</label>
-            <textarea name="education" id="education" rows="4" required></textarea><br>
+            <textarea name="education" id="education" rows="4" placeholder="Enter your education." required></textarea><br>
         </fieldset>
 
         <fieldset>
             <legend>Experience</legend>
             <label for="experience">Experience:</label>
-            <textarea name="experience" id="experience" rows="4" required></textarea><br>
+            <textarea name="experience" id="experience" rows="4" placeholder="Please share your job experience." required></textarea><br>
         </fieldset>
 
         <fieldset id="skills">
             <legend>Skills</button></legend>
             <label for="skills_exp">Skills Experience:</label>
-            <textarea name="skills" id="skills_exp" rows="4" required></textarea><br>
+            <textarea name="skills" id="skills_exp" rows="4" placeholder="Please enter skills." required></textarea><br>
         </fieldset>
         
        <!-- Button to toggle Skills section -->
