--- a/mileston_03/index.html
+++ b/mileston_03/index.html
@@ -31,7 +31,7 @@
                 <option value="Other">Other</option>
             </select>
 
-            <label for="nationality"><strong><Nationality:</strong></label>
+            <label for="nationality"><strong>Nationality:</strong></label>
             <input type="text" id="nationality" name="nationality" required placeholder="Enter your nationality.">
 
             <label for="email"><strong>Email:</strong></label>
