--- a/mileston_1-2/index.html
+++ b/mileston_1-2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Static Resume Builder By Shehreen Arshad</h1>
+    <h1> Static Interactive Resume Builder By Shehreen Arshad</h1>
     
     <img src="dp me.jpg" alt="Profile Picture" width="150">
     
