--- a/mileston_3/index.html
+++ b/mileston_3/index.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Static Resume Builder By Shehreen Arshad</h1>
+    <h1> Interactive And Dynamic Resume Builder</h1>
 
     <img src="dp me.jpg" alt="Profile Picture" width="150" id="profilePicture">
 
     <form id="resumeBuilder">
         <fieldset>
             <legend>Personal Information</legend>
-
             <label for="userName"><strong>Name:</strong></label>
             <input type="text" id="userName" name="userName" required spellcheck="false" placeholder="Enter your name.">
 
