--- a/mileston_3/index.html
+++ b/mileston_3/index.html
@@ -58,9 +58,9 @@
     </fieldset>
 
     <fieldset>
-      <legend>Experience</legend>
+      <legend>Work Experience</legend>
       <div id="experience-list">
-        <label for="experience"><strong>Experience:</strong></label>
+        <label for="experience"><strong>Work Experience:</strong></label>
         <textarea name="experience" id="experience" rows="2" placeholder="Please share your job experience."
           required></textarea>
       </div>
