--- a/mileston_4/index.html
+++ b/mileston_4/index.html
@@ -11,13 +11,19 @@
 <body>
   <h1> Interactive And Dynamic Resume Builder</h1>
 
-  <img src="dp me.jpg" alt="Profile Picture" width="150" id="profilePicture">
+  <label for="profilePictureInput"><img src="dp me.jpg" alt="Profile Picture" width="150" id="profilePicture" title="Upload your profile picture."></label>
+  <input type="file" id="profilePictureInput" accept="image/*" style="display: none;">
+
 
   <form id="resumeBuilder">
     <fieldset>
       <legend>Personal Information</legend>
+
+      <label for="user_url"><strong>Resume URL:</strong></label>
+      <input type="text" id="user_url" name="user_url" required spellcheck="false" placeholder="Enter your data url.">
+
       <label for="userName"><strong>Name:</strong></label>
-      <input type="text" id="userName" name="userName" required spellcheck="false" placeholder="Enter your name.">
+      <input type="text" id="userName" name="userName" required spellcheck="false" placeholder="Enter your full name.">
 
       <label for="aboutMe"><strong>About Me:</strong></label>
       <textarea id="aboutMe" name="aboutMe" placeholder="Write a short bio about yourself." required></textarea>
@@ -44,9 +50,7 @@
       <label for="address"><strong>Address:</strong></label>
       <input type="text" id="address" name="address" placeholder="Enter your full address." required>
 
-      <label for="profilePictureInput">Upload your picture:</label>
-      <input type="file" id="profilePictureInput" accept="image/*">
-    </fieldset>
+       </fieldset>
 
     <fieldset>
       <legend>Education</legend>
@@ -96,14 +100,14 @@
   </form>
 
   <div id="resumeOutput"></div>
-
-<!-- Button to download the resume -->
+<!-- 
+Button to download the resume -->
 <button id="downloadPDF">Download PDF</button>
 
 <!-- Button to share the resume -->
-<button id="shareLink">Copy Resume Link</button>
-<p id="shareMessage" class="hidden">Resume link copied!</p>
-
+<button id="shareLink">Copy Resume Link</button> 
+<p id="shareMessage" class="hidden">Resume link copied!</p> 
+ 
 
   <script src="scripts.js"></script>
 </body>
