--- a/mileston_4/index.html
+++ b/mileston_4/index.html
@@ -100,13 +100,14 @@
   </form>
 
   <div id="resumeOutput"></div>
-<!-- 
-Button to download the resume -->
-<button id="downloadPDF">Download PDF</button>
 
 <!-- Button to share the resume -->
 <button id="shareLink">Copy Resume Link</button> 
 <p id="shareMessage" class="hidden">Resume link copied!</p> 
+
+<!-- Button to download the resume -->
+<button id="downloadPDF">Download PDF</button>
+
  
 
   <script src="scripts.js"></script>
