--- a/mileston_5/index.html
+++ b/mileston_5/index.html
@@ -59,7 +59,7 @@
         <label for="education"><strong>Education:</strong></label>
         <textarea name="education" id="education" rows="2" placeholder="Enter your education." required></textarea>
       </div>
-      <button type="button" id="add-education">Add More Education</button><br>
+      <button type="button" id="add-education" class="add_more">Add More Education</button><br>
     </fieldset>
 
     <fieldset style="display: none;">
@@ -69,7 +69,7 @@
         <textarea name="experience" id="experience" rows="2" placeholder="Please share your job experience."
           required></textarea>
       </div>
-      <button type="button" id="add-experience">Add More Experience</button><br>
+      <button type="button" id="add-experience" class="add_more">Add More Experience</button><br>
     </fieldset>
 
     <fieldset id="skills" style="display: none;">
@@ -78,7 +78,7 @@
         <label for="skills_exp"><strong>Skills:</strong></label>
         <textarea name="skills" id="skills_exp" rows="2" placeholder="Please enter skills." required></textarea>
       </div>
-      <button type="button" id="add-skills">Add More Skills</button><br>
+      <button type="button" id="add-skills"class="add_more">Add More Skills</button><br>
     </fieldset>
 
     <fieldset  style="display: none;">
